Insere filenames para pdf

--- a/bib.bib
+++ b/bib.bib
@@ -889,6 +889,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/854056}},
+  file =         {bass88:prokofiev.pdf},
   keywords =     {music analysis}
 }
 
@@ -953,6 +954,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/745906}},
+  file =         {beach93:schubert.pdf},
   keywords =     {music analysis}
 }
 
@@ -2480,6 +2482,7 @@
   month =        {Summer},
   note =         {Available at
                   \url{http://www.jstor.org/stable/763994}},
+  file =         {churgin98:beethoven.pdf},
   keywords =     {music analysis}
 }
 
@@ -4778,6 +4781,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/745791}},
+  file =         {graybill88:harmonic.pdf},
   keywords =     {music analysis}
 }
 
@@ -4802,6 +4806,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/726363}},
+  file =         {grew31:grosse.pdf},
   keywords =     {music analysis}
 }
 
@@ -4893,6 +4898,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/734949}},
+  file =         {h.72:review.pdf},
   keywords =     {music analysis}
 }
 
@@ -6361,6 +6367,7 @@
   month =        {Autumn},
   note =         {Available at
                   \url{http://www.jstor.org/stable/831194}},
+  file =         {larue81:review.pdf},
   keywords =     {music analysis}
 }
 
@@ -6798,6 +6805,7 @@
   month =        {Winter},
   note =         {Available at
                   \url{http://www.jstor.org/stable/842985}},
+  file =         {longyear69:binary.pdf},
   keywords =     {music analysis}
 }
 
@@ -6814,6 +6822,7 @@
   month =        {Spring---Winter},
   note =         {Available at
                   \url{http://www.jstor.org/stable/842901}},
+  file =         {longyear71:minor.pdf},
   keywords =     {music analysis}
 }
 
@@ -7636,6 +7645,7 @@
   file =         {moore06:missa.pdf},
   url =
                   {http://digital.library.unt.edu/permalink/meta-dc-5257:1},
+  file =         {moore06:missa.pdf},
   keywords =     {music analysis}
 }
 
@@ -8204,6 +8214,7 @@
   month =        {Fall},
   note =         {Available at
                   \url{http://www.jstor.org/stable/40374337}},
+  file =         {orr83:effect.pdf},
   keywords =     {music analysis}
 }
 
@@ -9158,6 +9169,7 @@
   month =        {Autumn},
   note =         {Available at
                   \url{http://www.jstor.org/stable/829717}},
+  file =         {ratner49:harmonic.pdf},
   keywords =     {music analysis}
 }
 
@@ -10726,6 +10738,7 @@
   month =        {Jul--Dec},
   note =         {Available at
                   \url{http://www.jstor.org/stable/931392}},
+  file =         {simon59:sonata.pdf},
   keywords =     {music analysis}
 }
 
@@ -10741,6 +10754,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/1214404}},
+  file =         {sims76:analysis.pdf},
   keywords =     {music analysis}
 }
 
@@ -10815,6 +10829,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/3090650}},
+  file =         {sly01:schubert.pdf},
   keywords =     {music analysis}
 }
 
@@ -10858,6 +10873,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/746568}},
+  file =         {smith94:liquidation.pdf},
   keywords =     {music analysis}
 }
 
@@ -10983,6 +10999,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/842976}},
+  file =         {stevens64:review.pdf},
   keywords =     {music analysis}
 }
 
@@ -11000,6 +11017,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/830894}},
+  file =         {stevens71:18th.pdf},
   keywords =     {music analysis}
 }
 
@@ -11128,6 +11146,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/746766}},
+  file =         {swift77:xii.pdf},
   keywords =     {music analysis}
 }
 
@@ -11863,6 +11882,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/746189}},
+  file =         {webster78:schubert.pdf},
   keywords =     {music analysis}
 }
 
@@ -11879,6 +11899,7 @@
   month =        {Jul},
   note =         {Available at
                   \url{http://www.jstor.org/stable/3519822}},
+  file =         {webster79:schubert.pdf},
   keywords =     {music analysis}
 }
 
