Insere filenames para pdf

--- a/bib.bib
+++ b/bib.bib
@@ -1333,7 +1333,8 @@
                   contours is developed, examined, and advocated. The
                   relationships and interactions between the pitch and
                   duration contours in Berio’s Sequenza I are examined
-                  in the light of the proposed theory.}
+                  in the light of the proposed theory.},
+  file =         {bor09:contour.pdf}
 }
 
 @Misc{		  bordini,
@@ -2558,6 +2559,7 @@
                   melodic contour, a medial level of structure labeled
                   textural contour, and the contour of the entire
                   piece are examined.},
+  file =         {clifford95:contour.pdf},
   keywords =     {musical contour}
 }
 
@@ -3824,6 +3826,7 @@
                   earlier owrk using atonal melodies and shows the
                   interdependence of the two components, scale and
                   contour.},
+  file =         {dowling78:scale.pdf},
   keywords =     {perception},
   keywords =     {musical contour}
 }
@@ -4392,6 +4395,7 @@
                   aural training exercises and activities designed
                   primarily to improve skills in ear training, sight
                   singing, improvisation, and dictation.},
+  file =         {foulkes-levy96:synthesis.pdf},
   keyword =      {musical contour}
 }
 
@@ -4467,6 +4471,7 @@
   doi =          {10.2307/843710},
   file =         {friedmann87:contour.pdf},
   publisher =    {Duke University Press},
+  file =         {friedmann87:response.pdf},
   keywords =     {musical contour}
 }
 
@@ -7215,6 +7220,7 @@
                   other domains and illustrates the application of one
                   such generalization to the analysis of chord spacing
                   in a piano work of Luigi Dallapiccola.},
+  file =         {marvin88:generalized.pdf},
   keywords =     {musical contour}
 }
 
@@ -7242,6 +7248,7 @@
                   Varese's Octandre, the paper concludes with an
                   analysis of Density 21.5 that focuses upon
                   relationships among rhythmic contours.},
+  file =         {marvin91:perception.pdf},
   keywords =     {perception}
 }
 
@@ -7754,6 +7761,7 @@
   number =       {1/2},
   pages =        {328--358},
   month =        {Winter - Summer},
+  file =         {morris95:compositional.pdf},
   keywords =     {musical contour}
 }
 
@@ -10252,6 +10260,7 @@
                   tendency to unintentionally insert his own
                   compositional voice and artistic sensibilities into
                   his birdsong transcriptions},
+  file =         {schultz08:melodic.pdf},
   keywords =     {musical contour}
 }
 
@@ -10310,7 +10319,8 @@
                   Beethoven, Berg, Webern, Messiaen, and
                   Holland-Dozier-Holland. Finally, Chapter Five offers
                   some concluding remarks and explores the potential
-                  for future research using this methodology.}
+                  for future research using this methodology.},
+  file =         {schultz09:diachronic.pdf}
 }
 
 @Book{		  schwartz.ea93:music,
@@ -10383,6 +10393,7 @@
                   {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0},
   file =         {seeger60:moods.pdf},
   publisher =    {University of California Press},
+  file =         {seeger60:moods.pdf},
   keywords =     {musical contour}
 }
 
@@ -10400,6 +10411,7 @@
   doi =          {10.2307/850147},
   file =         {seeger69:formational.pdf},
   publisher =    {University of Illinois Press},
+  file =         {seeger69:formational.pdf},
   keywords =     {musical contour}
 }
 
@@ -10650,7 +10662,8 @@
   volume =       33,
   number =       1,
   pages =        {17--18},
-  month =        {March}
+  month =        {March},
+  file =         {shmulevich04:note.pdf}
 }
 
 @Article{	  shulter01:xenharmonic,
@@ -11464,6 +11477,7 @@
                   diversificados e apontando a convivência de técnicas
                   tradicionais com gestos musicais característicos do
                   século XX.},
+  file =         {thiesen05:navegando.pdf},
   keywords =     {musical contour}
 }
 
@@ -11516,6 +11530,7 @@
                   controlled anticipation, has been accounted for
                   fairly well, the correlation coefficient between
                   predictions and outcomes being 0.76.},
+  file =         {thomassen82:melodic.pdf},
   keywords =     {musical contour}
 }
 
