Insere mais filenames

--- a/bib.bib
+++ b/bib.bib
@@ -937,6 +937,7 @@
   volume =       1,
   pages =        {7--22},
   month =        {Spring},
+  file =         {beach79:pitch.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -1802,7 +1803,8 @@
   pages =        {9--15},
   month =        {Autumn},
   note =         {Available at
-                  \url{http://www.jstor.org/stable/943933}}
+                  \url{http://www.jstor.org/stable/943933}},
+  file =         {brown64:prokofieff.pdf}
 }
 
 @Article{	  brown68:program,
@@ -1854,6 +1856,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/831286}},
+  file =         {brown82:emulation.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -1892,6 +1895,7 @@
   month =        {Jan},
   note =         {Available at
                   \url{http://www.jstor.org/stable/739592}},
+  file =         {bukofzer52:fauxbourdon.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -1943,6 +1947,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/3090649}},
+  file =         {burn01:further.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -2896,6 +2901,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/830051}},
+  file =         {crocker62:discant.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -3081,6 +3087,7 @@
   month =        {Jul.},
   note =         {Available at
                   \url{http://www.jstor.org/stable/741005}},
+  file =         {dalglish69:hocket.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -3095,6 +3102,7 @@
   pages =        {37--51},
   note =         {Available at
                   \url{http://www.jstor.org/stable/20532142}},
+  file =         {dalglish72:use.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -4096,6 +4104,7 @@
   pages =        {173--195},
   note =         {Available at
                   \url{http://www.jstor.org/stable/3686766}},
+  file =         {elders89:guillaume.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -4196,6 +4205,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/830299}},
+  file =         {falck72:rondellus.pdf},
   keywords =     {musicology}
 }
 
@@ -4722,6 +4732,7 @@
   month =        {Autumn},
   note =         {Available at
                   \url{http://www.jstor.org/stable/843961}},
+  file =         {gosman97:stacked.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -4796,6 +4807,7 @@
   year =         1979,
   author =       {Douglass M. Green},
   address =      {New York},
+  file =         {green79:form.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -5002,7 +5014,7 @@
   volume =       45,
   number =       2,
   pages =        {345-433},
-  file =         {hanninen01:orientations},
+  file =         {hanninen01:orientations.pdf},
   keywords =     {musical contour}
 }
 
@@ -5017,6 +5029,7 @@
   pages =        {100--109},
   note =         {Available at
                   \url{http://www.jstor.org/stable/731197}},
+  file =         {harbinson66:isorhythmic.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -5429,6 +5442,7 @@
   month =        {Apr.--Sep},
   note =         {Available at
                   \url{http://www.jstor.org/stable/931501}},
+  file =         {horsley63:diminutions.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -5481,7 +5495,8 @@
   pages =        {18--30},
   month =        {Jan},
   note =         {Available at
-                  \url{http://www.jstor.org/stable/740183}}
+                  \url{http://www.jstor.org/stable/740183}},
+  file =         {howelljr64:cabezon.pdf}
 }
 
 @Book{		  hughes.ea60:ars,
@@ -6029,6 +6044,7 @@
   pages =        {3--35},
   note =         {Available at
                   \url{http://www.jstor.org/stable/938883}},
+  file =         {kirkman90:early.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -6039,6 +6055,7 @@
   year =         1982,
   address =      {New Heaven; London},
   note =         {Traduzido por David Beach e Jurgen Thym},
+  file =         {kirnberger82:art.pdf},
   keyword =      {counterpoint}
 }
 
@@ -6233,6 +6250,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/746694}},
+  file =         {kramer81:mirror.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -6468,6 +6486,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/3090669}},
+  file =         {leach00:counterpoint.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -6653,6 +6672,7 @@
   publisher =    {Yale University Press},
   year =         1987,
   address =      {New Haven},
+  file =         {lewin87:generalized.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -7006,6 +7026,7 @@
   month =        {Jan},
   note =         {Available at
                   \url{http://www.jstor.org/stable/741126}},
+  file =         {maniates66:mannerist.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -7422,6 +7443,7 @@
   year =         1980,
   address =      {Brasília},
   edition =      3,
+  file =         {med80:teoria.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -7802,6 +7824,7 @@
                   of compositional space. Finally, I describe an
                   algorithm that allows one to construct voice-leading
                   spaces of any degree of complexity or closure.},
+  file =         {morris98:voice.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -8593,6 +8616,7 @@
   publisher =    {Wiley Publishing, Inc},
   year =         2007,
   address =      {Hoboken, NJ},
+  file =         {pilhofer.ea07:music.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -8627,6 +8651,7 @@
   year =         1959,
   author =       {Walter Piston},
   address =      {London},
+  file =         {piston59:harmony.pdf},
   file =         {piston59:harmony.pdf},
   keywords =     {music harmony and theory}
 }
@@ -9306,6 +9331,7 @@
   month =        {Spring},
   note =         {Available at
                   \url{http://www.jstor.org/stable/831582}},
+  file =         {reynolds87:musical.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -9891,6 +9917,7 @@
   address =      {Chicago and London},
   annote =       {Edited by Oswald Jonas. Translated by Elisabeth Mann
                   Borgese},
+  file =         {schenker54:harmony.pdf},
   keywords =     {music harmony and theory}
 }
 
