--- a/bib.bib
+++ b/bib.bib
@@ -154,7 +154,7 @@
   pages =        {179--215},
   number =       2,
   annote =
-                  {http://links.jstor.org/sici?sici=0014-1836(197605)20%3A2%3C179%3AMCT%3E2.0.CO%3B2-E},
+                  {Available at \url{http://www.jstor.org/pss/851015}},
   doi =          {10.2307/851015},
   file =         {adams76:melodic.pdf},
   publisher =    {University of Illinois Press},
@@ -4461,8 +4461,7 @@
   volume =       29,
   pages =        {223--48},
   number =       2,
-  annote =
-                  {http://links.jstor.org/sici?sici=0022-2909(198523)29%3A2%3C223%3AAMFTDO%3E2.0.CO%3B2-E},
+  annote =       {Available at \url{http://www.jstor.org/pss/843614}},
   doi =          {10.2307/843614},
   file =         {friedmann85:methodology.pdf},
   keywords =     {musical contour}
@@ -4476,8 +4475,7 @@
   volume =       31,
   pages =        {268--274},
   number =       2,
-  annote =
-                  {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C268%3AARMCTC%3E2.0.CO%3B2-8},
+  annote =       {Available at \url{http://www.jstor.org/stable/843710}},
   doi =          {10.2307/843710},
   file =         {friedmann87:contour.pdf},
   publisher =    {Duke University Press},
@@ -7162,8 +7160,7 @@
   volume =       31,
   pages =        {225--67},
   number =       2,
-  annote =
-                  {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C225%3ARMCEOA%3E2.0.CO%3B2-%23},
+  annote =       {Available at \url{http://www.jstor.org/pss/843709}},
   doi =          {10.2307/843709},
   file =         {marvin.ea87:relating.pdf},
   keywords =     {musical contour}
@@ -7724,8 +7721,7 @@
   year =         1990,
   volume =       34,
   pages =        {445--60},
-  annote =
-                  {http://links.jstor.org/sici?sici=0031-6016(197923%2F198022)18%3A1%2F2%3C445%3AASIFPS%3E2.0.CO%3B2-B},
+  annote =       {Available at \url{http://www.jstor.org/pss/832996}},
   file =         {morris90:similarity.pdf},
   keywords =     {musical contour}
 }
@@ -7768,8 +7764,7 @@
                   compared to familiar reductive methodologies of
                   tonal music and the perceptual gestalt theories of
                   Tenney and Polansky.},
-  annote =
-                  {http://links.jstor.org/sici?sici=0195-6167(199323)15%3A2%3C205%3ANDITTA%3E2.0.CO%3B2-S},
+  annote =       {Available at \url{http://www.jstor.org/pss/745814}},
   file =         {morris93:directions.pdf},
   keywords =     {musical contour}
 }
@@ -8728,8 +8723,7 @@
                   analysis of waveforms, melody, the sequence of pitch
                   means in some large-scale segmentation of a piece,
                   or any other quantifiable parameter.},
-  annote =
-                  {http://links.jstor.org/sici?sici=0022-2909(199223)36%3A2%3C259%3APAIMSF%3E2.0.CO%3B2-L},
+  annote =       {Available at \url{http://www.jstor.org/pss/843933}},
   doi =          {10.2307/843933},
   file =         {polansky.ea92:possible.pdf},
   keywords =     {musical contour}
@@ -9078,8 +9072,7 @@
                   simply and elegantly made. Steve Reich's The Desert
                   Mzisic provides a testing ground for these
                   theories.},
-  annote =
-                  {http://links.jstor.org/sici?sici=0195-6167(199723)19%3A2%3C232%3AFETTTO%3E2.0.CO%3B2-W},
+  annote =       {Available at \url{http://www.jstor.org/stable/745755}},
   file =         {quinn97:fuzzy.pdf},
   keywords =     {musical contour}
 }
@@ -10416,9 +10409,7 @@
   volume =       13,
   pages =        {224--261},
   number =       {1/3},
-  annote =
-                  {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0},
-  file =         {seeger60:moods.pdf},
+  annote =       {Available at \url{http://www.jstor.org/stable/830257}},
   publisher =    {University of California Press},
   file =         {seeger60:moods.pdf},
   keywords =     {musical contour}
@@ -10433,8 +10424,7 @@
   volume =       13,
   pages =        {230--247},
   number =       2,
-  annote =
-                  {http://links.jstor.org/sici?sici=0014-1836(196905)13%3A2%3C230%3AOTFAOT%3E2.0.CO%3B2-Z},
+  annote =       {Available at \url{http://www.jstor.org/pss/850147}},
   doi =          {10.2307/850147},
   file =         {seeger69:formational.pdf},
   publisher =    {University of Illinois Press},
