--- a/bib.bib
+++ b/bib.bib
@@ -5575,6 +5575,7 @@
                   sample of Gregorian chant---suggesting that the
                   chant melodies were constructed so as to avoid
                   strong rhythmic stresses.},
+  file =         {huron.ea96:melodic.pdf},
   keywords =     {musical contour}
 }
 
@@ -9590,8 +9591,8 @@
                   present results of experimentation with simulated
                   data, as well as an actual melody database of a QBH
                   system.},
-  annote =
-                  {http://www.ee.iitb.ac.in/~sumantra/publications/ncc04_qbh.pdf},
+  annote =       {Available at
+                  \url{http://www.ee.iitb.ac.in/~sumantra/publications/ncc04_qbh.pdf}},
   keywords =     {musical contour}
 }
 
