--- a/bib.bib
+++ b/bib.bib
@@ -153,8 +153,7 @@
   volume =       20,
   pages =        {179--215},
   number =       2,
-  annote =
-                  {Available at \url{http://www.jstor.org/pss/851015}},
+  annote =       {Available at \url{http://www.jstor.org/pss/851015}},
   doi =          {10.2307/851015},
   file =         {adams76:melodic.pdf},
   publisher =    {University of Illinois Press},
@@ -1163,6 +1162,34 @@
   address =      {Barcelona, Spain},
   where =        {BER42.PS},
   keywords =     {computer music}
+}
+
+@article{bertissolo08:som,
+  author =       {Guilherme Berstissolo},
+  title =        {O som em movimento: a noção de movimento em música
+                  na primeira das Zehn Stücke für Bläserquintett de
+                  György Ligeti},
+  journal =      {Ictus},
+  year =         2008,
+  volume =       9,
+  number =       2,
+  pages =        {35--44},
+  note =         {Available at
+                  \url{http://www.ictus.ufba.br/index.php/ictus/article/view/156}},
+  url =
+                  {\url{http://www.ictus.ufba.br/index.php/ictus/article/view/156}},
+  abstract =     {Esse artigo visa apresentar as estratégias
+                  composicionais aplicadas para a criação de movimento
+                  e plasticidade na composição da primeira das Zehn
+                  Stücke für Bläserquintett1 de György Ligeti. Após
+                  uma pequena contextualização histórica sobre a sua
+                  composição, apresentamos alguns elementos de
+                  recorrência e transformação, bem como estratégias de
+                  neutralização de aspectos musicais tradicionais,
+                  tais como melodia, consonância, métrica, condução de
+                  vozes, entre outros.},
+  keywords =     {music analysis},
+  file =         {bertissolo08:som.pdf}
 }
 
 @Manual{	  bianchini02:csgraph,
@@ -4475,7 +4502,8 @@
   volume =       31,
   pages =        {268--274},
   number =       2,
-  annote =       {Available at \url{http://www.jstor.org/stable/843710}},
+  annote =       {Available at
+                  \url{http://www.jstor.org/stable/843710}},
   doi =          {10.2307/843710},
   file =         {friedmann87:contour.pdf},
   publisher =    {Duke University Press},
@@ -9073,7 +9101,8 @@
                   simply and elegantly made. Steve Reich's The Desert
                   Mzisic provides a testing ground for these
                   theories.},
-  annote =       {Available at \url{http://www.jstor.org/stable/745755}},
+  annote =       {Available at
+                  \url{http://www.jstor.org/stable/745755}},
   file =         {quinn97:fuzzy.pdf},
   keywords =     {musical contour}
 }
@@ -10410,7 +10439,8 @@
   volume =       13,
   pages =        {224--261},
   number =       {1/3},
-  annote =       {Available at \url{http://www.jstor.org/stable/830257}},
+  annote =       {Available at
+                  \url{http://www.jstor.org/stable/830257}},
   publisher =    {University of California Press},
   file =         {seeger60:moods.pdf},
   keywords =     {musical contour}
