Insere dissertação de Pedro Amorim

--- a/bib.bib
+++ b/bib.bib
@@ -8099,6 +8099,29 @@
   keywords =     {programs}
 }
 
+@mastersthesis{oliveira08:poetica,
+  author =       {{Pedro Amorim de} {Oliveira Filho}},
+  title =        {Poética da experiência: uma investigação sobre
+                  indeterminismo na música},
+  school =       {Universidade Federal da Bahia},
+  year =         2008,
+  address =      {Salvador, Brasil},
+  abstract =     {Este trabalho apresenta uma investigação sobre o
+                  indeterminismo na música, a partir da análise de
+                  três obras musicais que utilizam processos de
+                  indeterminação como elementos estruturais. Partindo
+                  de uma contextualização das práticas e tendências
+                  musicais que enfatizam o fenômeno da indeterminação,
+                  é feita uma reflexão filosófica sobre o papel da
+                  experiência na música aleatória e experimental,
+                  enfatizando a importância da idéia de novidade e sua
+                  associação com o acaso. A poética compositiva e o
+                  aspecto virtual da forma são as bases sobre as quais
+                  se fundamentam as análises das peças.},
+  keywords =     {music},
+  file =         {oliveira08:poetica.pdf}
+}
+
 @InBook{	  oliveira94:musica,
   author =       {Jamary Oliveira},
   chapter =      {Pseudópodes II},
