--- a/bib.bib
+++ b/bib.bib
@@ -6250,6 +6250,7 @@
   address =      {Upper Saddle River, New Jersey},
   edition =      {3 ed.},
   isbn =         {978-0131930803},
+  file =         {kostka05:materials.pdf},
   keywords =     {composition}
 }
 
@@ -7499,6 +7500,17 @@
   publisher =    {Alphonse Leduc},
   year =         1944,
   address =      {Paris},
+  keywords =     {composition}
+}
+
+@Book{		  messiaen44:technique-eng,
+  author =       {Olivier Messiaen},
+  title =        {The Technique of My Musical Language},
+  publisher =    {Alphonse Leduc},
+  year =         1944,
+  address =      {Paris},
+  note =         {Translated by John Satterfield},
+  file =         {messiaen44:technique-eng.pdf},
   keywords =     {composition}
 }
 
