Insere nome de Morris por extenso

--- a/bib.bib
+++ b/bib.bib
@@ -7751,12 +7751,12 @@
                   Compositional Design},
   publisher =    {Yale University Press},
   year =         1987,
-  author =       {Robert D. Morris},
+  author =       {Robert Daniel Morris},
   keywords =     {musical contour}
 }
 
 @Article{	  morris90:similarity,
-  author =       {Robert D. Morris},
+  author =       {Robert Daniel Morris},
   title =        {A Similarity Index for Pitch-Class Sets},
   journal =      {Journal of Music Theory},
   year =         1990,
@@ -7768,7 +7768,7 @@
 }
 
 @Article{	  morris93:directions,
-  author =       {Robert D. Morris},
+  author =       {Robert Daniel Morris},
   title =        {New Directions in the Theory and Analysis of Musical
                   Contour},
   journal =      {Music Theory Spectrum},
@@ -7811,7 +7811,7 @@
 }
 
 @Article{	  morris95:compositional,
-  author =       {Robert D. Morris},
+  author =       {Robert Daniel Morris},
   title =        {Compositional Spaces and Other Territories},
   journal =      {Perspectives of New Music},
   year =         1995,
@@ -7824,7 +7824,7 @@
 }
 
 @Article{	  morris98:voice,
-  author =       {Robert D. Morris},
+  author =       {Robert Daniel Morris},
   title =        {Voice-Leading Spaces},
   journal =      {Music Theory Spectrum},
   year =         1998,
