Insere ítens e corrige formatação de ítens antigos

--- a/bib.bib
+++ b/bib.bib
@@ -1164,7 +1164,7 @@
   keywords =     {computer music}
 }
 
-@article{bertissolo08:som,
+@Article{	  bertissolo08:som,
   author =       {Guilherme Berstissolo},
   title =        {O som em movimento: a noção de movimento em música
                   na primeira das Zehn Stücke für Bläserquintett de
@@ -1310,6 +1310,19 @@
   keyword =      {Bohlen-Pierce},
   year =         2004,
   file =         {bohlen04:'pythagorean'}
+}
+
+@InCollection{	  boker-heil.ea02:lied,
+  author =       {Norbert Böker-Heil and David Fallows and John
+                  H. Baron and James Parsons and Eric Sams and Graham
+                  Johnson and Paul Griffiths},
+  title =        {Lied},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @PhDThesis{	  bor09:contour,
@@ -1805,6 +1818,19 @@
   keywords =     {programs}
 }
 
+@InCollection{	  brown.ea02:opera,
+  author =       {Howard Mayer Brown and Ellen Rosand and Reinhard
+                  Strohm and Michel Noiray and Roger Parker and Arnold
+                  Whittall and Roger Savage and Barry Millington},
+  title =        {Opera},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
 @Article{	  brown.ea90:statistical,
   title =        {{A statistical approach to machine translation}},
   author =       {Brown, P.F. and Della Pietra, S.A. and Della Pietra,
@@ -2122,6 +2148,29 @@
   year =         1998,
   keywords =     {computer music},
   where =        {thesis-finale.pdf}
+}
+
+@InCollection{	  caldwell02:ricercare,
+  author =       {John Caldwell},
+  title =        {Ricercare [ricercar, recercar(e), recerchar(e),
+                  ricercata]},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
+@InCollection{	  caldwell02:toccata,
+  author =       {John Caldwell},
+  title =        {Toccata},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @InProceedings{	  cambouropoulos01:automatic,
@@ -3141,17 +3190,6 @@
   keywords =     {aula composicao}
 }
 
-@Book{		  dallin74:techniques,
-  author =       {Leon Dallin},
-  title =        {Techniques of Twentieth Century Composition: A Guide
-                  to the Materials of Modern Music},
-  publisher =    {WM. C. Brown Company Publishers},
-  year =         1974,
-  address =      {Dubuque, Iowa},
-  edition =      3,
-  keywords =     {composition}
-}
-
 @InBook{	  dallin74:melodic,
   author =       {Leon Dallin},
   title =        {Techniques of Twentieth-Century Composition: A Guide
@@ -3163,6 +3201,17 @@
   edition =      3,
   pages =        {4--18},
   keywords =     {musical contour}
+}
+
+@Book{		  dallin74:techniques,
+  author =       {Leon Dallin},
+  title =        {Techniques of Twentieth Century Composition: A Guide
+                  to the Materials of Modern Music},
+  publisher =    {WM. C. Brown Company Publishers},
+  year =         1974,
+  address =      {Dubuque, Iowa},
+  edition =      3,
+  keywords =     {composition}
 }
 
 @Article{	  dannenberg86:arctic,
@@ -4293,6 +4342,18 @@
   keywords =     {music harmony and theory}
 }
 
+@InCollection{	  field.ea02:fantasia,
+  author =       {Christopher D.S. Field and E. Eugene Helm and
+                  William Drabkin/R},
+  title =        {Fantasia},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
 @InProceedings{	  fitsioris.ea08:parallel,
   author =       {G. Fitsioris and D. Conklin},
   title =        {Parallel successions of perfect fifths in the Bach
@@ -4505,9 +4566,8 @@
   annote =       {Available at
                   \url{http://www.jstor.org/stable/843710}},
   doi =          {10.2307/843710},
-  file =         {friedmann87:contour.pdf},
-  publisher =    {Duke University Press},
   file =         {friedmann87:response.pdf},
+  publisher =    {Duke University Press},
   keywords =     {musical contour}
 }
 
@@ -4532,6 +4592,17 @@
   series =       {The Cambridge history of music},
   chapter =      15,
   address =      {Cambridge; New York}
+}
+
+@InCollection{	  fuller02:suite,
+  author =       {David Fuller},
+  title =        {Suite},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @Book{		  fux.ea71:study,
@@ -5618,6 +5689,18 @@
   pages =        {11--26},
   keywords =     {computer music},
   where =        {26.2huron.pdf}
+}
+
+@InCollection{	  hutchings.ea02:concerto,
+  author =       {Arthur Hutchings/R and Michael Talbot and Cliff
+                  Eisen and Leon Botstein and Paul Griffiths},
+  title =        {Concerto},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @PhDThesis{	  ishiyama96:application,
@@ -6979,6 +7062,17 @@
   keywords =     {computer music}
 }
 
+@InCollection{	  macdonald02:symphonic,
+  author =       {Hugh MacDonald},
+  title =        {Symphonic Poem},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
 @Article{	  mackay.ea95:hierarchical,
   author =       {David J. C. Mackay and Linda C. Bauman Petoy},
   title =        {A Hierarchical Dirichlet Language Model},
@@ -7712,7 +7806,6 @@
   file =         {moore06:missa.pdf},
   url =
                   {http://digital.library.unt.edu/permalink/meta-dc-5257:1},
-  file =         {moore06:missa.pdf},
   keywords =     {music analysis}
 }
 
@@ -8111,7 +8204,7 @@
   keywords =     {programs}
 }
 
-@mastersthesis{oliveira08:poetica,
+@MastersThesis{	  oliveira08:poetica,
   author =       {{Pedro Amorim de} {Oliveira Filho}},
   title =        {Poética da experiência: uma investigação sobre
                   indeterminismo na música},
@@ -8710,7 +8803,6 @@
   year =         1959,
   author =       {Walter Piston},
   address =      {London},
-  file =         {piston59:harmony.pdf},
   file =         {piston59:harmony.pdf},
   keywords =     {music harmony and theory}
 }
@@ -10494,7 +10586,6 @@
   doi =          {10.2307/850147},
   file =         {seeger69:formational.pdf},
   publisher =    {University of Illinois Press},
-  file =         {seeger69:formational.pdf},
   keywords =     {musical contour}
 }
 
@@ -10862,6 +10953,17 @@
   number =       1,
   volume =       5,
   year =         1989
+}
+
+@InCollection{	  sisman02:variations,
+  author =       {Elaine Sisman},
+  title =        {Variations},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @Article{	  site02:interval,
@@ -11657,6 +11759,20 @@
   where =        {mmm-35.pdf}
 }
 
+@InCollection{	  timms.ea02:cantata,
+  author =       {Colin Timms and Nigel Fortune and Malcolm Boyd and
+                  Friedhelm Krummacher and David Tunley and Malcolm
+                  Boyd and James R. Goodall and Juan José Carreras and
+                  Malcolm Boyd},
+  title =        {Cantata},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
 @Book{		  toch48:shaping,
   title =        {The Shaping Forces in Music},
   publisher =    {Criterion Music Corp},
@@ -12094,6 +12210,19 @@
   keywords =     {greek music}
 }
 
+@InCollection{	  westrup.ea02:aria,
+  author =       {Jack Westrup and Marita P. Mcclymonds and Julian
+                  Budden and andrew Clements and Tim Carter and Thomas
+                  Walker and Daniel Heartz and Dennis Libby},
+  title =        {Aria},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
+}
+
 @InCollection{	  westrup.ea57:general,
   author =       {J. A. Westrup and Gerald Abraham and Edward J. Dent
                   and Anselm Hughes and Egon Wellesz},
@@ -12194,6 +12323,17 @@
   volume =       2,
   year =         1996,
   keywords =     {computer music}
+}
+
+@InCollection{	  williams.ea02:continuo,
+  author =       {Peter Williams and David Ledbetter},
+  title =        {Continuo [basso continuo]},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @Article{	  willner96:more,
@@ -12350,6 +12490,18 @@
   number =       1,
   volume =       7,
   year =         1991
+}
+
+@InCollection{	  wolf.ea02:symphony,
+  author =       {Jan Larue/Eugene K. Wolf and Mark Evan Bonds and
+                  Stephen Walsh and Charles Wilson},
+  title =        {Symphony},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music history}
 }
 
 @Article{	  wolf90:four,
